# pypaskel

./: .gitattributes  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  requirements-dev.txt  setup.cfg  tox.ini
pypaskel/: test_version.py
