[metadata]
name = pypaskel
version = attr: pypaskel.__version__
description = A python package skeleton
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/pypaskel/
license = MIT


[options]
zip_safe = False
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = pypaskel/_version.py
versionfile_build = pypaskel/_version.py
tag_prefix =
parentdir_prefix = pypaskel-